[package]
name = "kconfigwtf"
version = "0.1.0"
edition = "2024"
description = "Static Linux kernel config explorer and distribution config indexer"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
ext4-view = { version = "0.9.3", features = ["std"] }
flate2 = "1.0"
futures-util = "0.3"
minijinja = "2.7"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.15"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
liblzma = "0.4"
zstd = "0.13"
ar = "0.9"
walkdir = "2.5"
regex = "1"
rpm = { version = "0.23.5", default-features = false, features = ["payload", "gzip-compression", "xz-compression", "zstd-compression", "bzip2-compression"] }
quick-xml = "0.38"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
